@@ -3,7 +3,9 @@ package dev.alphaserpentis.coffeecore.commands;
 import dev.alphaserpentis.coffeecore.core.CoffeeCore;
 import dev.alphaserpentis.coffeecore.data.bot.CommandResponse;
 import dev.alphaserpentis.coffeecore.data.server.ServerData;
-import io.reactivex.rxjava3.annotations.Experimental;
+import dev.alphaserpentis.coffeecore.hook.CommandHook;
+import dev.alphaserpentis.coffeecore.hook.defaults.MessageExpireHook;
+import dev.alphaserpentis.coffeecore.hook.defaults.RatelimitHook;
 import io.reactivex.rxjava3.annotations.NonNull;
 import io.reactivex.rxjava3.annotations.Nullable;
 import net.dv8tion.jda.api.EmbedBuilder;
@@ -19,9 +21,13 @@ import net.dv8tion.jda.api.interactions.commands.build.CommandData;
 import net.dv8tion.jda.api.interactions.commands.build.Commands;
 import net.dv8tion.jda.api.requests.restaction.WebhookMessageCreateAction;
 import net.dv8tion.jda.api.requests.restaction.interactions.ReplyCallbackAction;
+import net.dv8tion.jda.api.utils.FileUpload;
 
 import java.awt.Color;
+import java.io.IOException;
 import java.time.Instant;
+import java.util.AbstractMap;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
@@ -39,6 +45,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
     protected final HashMap<Long, Long> guildCommandIds = new HashMap<>();
     protected final HashMap<Long, Long> ratelimitMap = new HashMap<>();
     protected final Collection<Long> guildsToRegisterIn;
+    protected final Collection<CommandHook> commandHooks;
     protected final String name;
     protected final String description;
     protected final String helpDescription;
@@ -73,7 +80,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
     /**
      * Types of ephemeral available for commands.
      */
-    @Experimental
+    @Deprecated(forRemoval = true)
     public enum TypeOfEphemeral {
         /**
          * The default ephemeral type. This will be set to the server's default ephemeral type.
@@ -101,10 +108,12 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
         protected boolean useRatelimits = false;
         protected boolean forgiveRatelimitOnError = false;
         protected boolean messagesExpire = false;
+        protected boolean useDefaultHooks = true;
         protected CommandVisibility commandVisibility = CommandVisibility.GLOBAL;
         protected Command.Type commandType = Command.Type.SLASH;
         protected TypeOfEphemeral typeOfEphemeral = TypeOfEphemeral.DEFAULT;
         protected Collection<Long> guildsToRegisterIn = List.of();
+        protected Collection<CommandHook> commandHooks = new ArrayList<>();
 
         public BotCommandOptions() {}
 
@@ -116,7 +125,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
             this.description = description;
         }
 
-        @Deprecated
+        @Deprecated(forRemoval = true)
         public BotCommandOptions(
                 @NonNull String name,
                 @NonNull String description,
@@ -131,7 +140,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
             this.typeOfEphemeral = typeOfEphemeral;
         }
 
-        @Deprecated
+        @Deprecated(forRemoval = true)
         public BotCommandOptions(
                 @NonNull String name,
                 @NonNull String description,
@@ -148,7 +157,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
             this.deferReplies = deferReplies;
         }
 
-        @Deprecated
+        @Deprecated(forRemoval = true)
         public BotCommandOptions(
                 @NonNull String name,
                 @NonNull String description,
@@ -308,6 +317,17 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
         }
 
         /**
+         * Sets the command to use default hooks
+         * @param useDefaultHooks Whether the command will use default hooks
+         * @return {@link BotCommandOptions}
+         */
+        @NonNull
+        public BotCommandOptions setUseDefaultHooks(boolean useDefaultHooks) {
+            this.useDefaultHooks = useDefaultHooks;
+            return this;
+        }
+
+        /**
          * Sets the command's visibility
          * @param commandVisibility The command's visibility
          * @return {@link BotCommandOptions}
@@ -335,6 +355,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
          * @return {@link BotCommandOptions}
          */
         @NonNull
+        @Deprecated(forRemoval = true)
         public BotCommandOptions setTypeOfEphemeral(@NonNull TypeOfEphemeral typeOfEphemeral) {
             this.typeOfEphemeral = typeOfEphemeral;
             return this;
@@ -350,6 +371,17 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
         @NonNull
         public BotCommandOptions setGuildsToRegisterIn(@NonNull List<Long> guildsToRegisterIn) {
             this.guildsToRegisterIn = guildsToRegisterIn;
+            return this;
+        }
+
+        /**
+         * Sets the command's hooks
+         * @param commandHooks The command's hooks
+         * @return {@link BotCommandOptions}
+         */
+        @NonNull
+        public BotCommandOptions setHooks(@NonNull Collection<CommandHook> commandHooks) {
+            this.commandHooks.addAll(commandHooks);
             return this;
         }
 
@@ -396,6 +428,14 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
         commandType = options.commandType;
         ephemeralType = options.typeOfEphemeral;
         guildsToRegisterIn = options.guildsToRegisterIn;
+        commandHooks = options.commandHooks;
+
+        if(isUsingRatelimits() && options.useDefaultHooks) {
+            commandHooks.add(new RatelimitHook());
+        }
+        if(doMessagesExpire() && options.useDefaultHooks) {
+            commandHooks.add(new MessageExpireHook());
+        }
     }
 
     /**
@@ -443,7 +483,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
      * @return a nonnull {@link CommandResponse} containing either a {@link MessageEmbed} or String
      */
     @NonNull
-    @Experimental
+    @Deprecated(forRemoval = true)
     public CommandResponse<T> beforeRunCommand(long userId, @NonNull E event) {
         throw new UnsupportedOperationException("beforeRunCommand needs to be overridden!");
     }
@@ -454,8 +494,11 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
      * Commands not using embeds must override this method to return a {@link CommandResponse} containing String.
      * @param userId is a long ID provided by Discord for the user calling the command
      * @return a nullable {@link CommandResponse} that by default returns a {@link MessageEmbed}
+     * @deprecated Activating {@link #useRatelimits} will automatically use the {@link RatelimitHook} to handle
+     * ratelimits. Use that instead!
      */
     @Nullable
+    @Deprecated
     public CommandResponse<?> checkAndHandleRateLimitedUser(long userId) {
         if(isUserRatelimited(userId)) {
             return new CommandResponse<>(
@@ -587,6 +630,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
     }
 
     @NonNull
+    @Deprecated(forRemoval = true)
     public TypeOfEphemeral getEphemeralType() {
         return ephemeralType;
     }
@@ -609,6 +653,11 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
     @NonNull
     public Collection<Long> getGuildsToRegisterIn() {
         return guildsToRegisterIn;
+    }
+
+    @NonNull
+    public Collection<CommandHook> getCommandHooks() {
+        return commandHooks;
     }
 
     /**
@@ -634,50 +683,119 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
     @NonNull
     protected WebhookMessageCreateAction<?> processDeferredCommand(@NonNull final E event) {
         final long userId = event.getUser().getIdLong();
-        final InteractionHook hook = event.getHook();
+        final InteractionHook interactHook = event.getHook();
         final boolean msgIsEphemeral = determineEphemeralStatus(event);
+        final List<CommandHook> preExecHooks = commandHooks.stream()
+                .filter(hook -> hook.getTypeOfHook() == CommandHook.Type.PRE_EXECUTION)
+                .toList();
 
         try {
-            if(isOnlyEmbed()) {
-                if(getEphemeralType() == TypeOfEphemeral.DEFAULT) {
-                    event.deferReply(msgIsEphemeral).complete();
-                } else {
-                    CommandResponse<?> responseBeforeRunning = beforeRunCommand(userId, event);
+            event.deferReply(msgIsEphemeral).complete();
 
-                    event.deferReply(responseBeforeRunning.messageIsEphemeral()).complete();
-                    if(responseBeforeRunning.messageResponse() != null) {
-                        event.replyEmbeds(
-                                Arrays.asList((MessageEmbed[]) responseBeforeRunning.messageResponse())
-                        ).complete();
+            if(isOnlyEmbed()) {
+                if(!preExecHooks.isEmpty()) {
+                    ArrayList<MessageEmbed> embeds = new ArrayList<>();
+                    ArrayList<FileUpload> files = new ArrayList<>();
+
+                    preExecHooks.forEach(
+                            hook -> hook
+                                    .execute(this, event, null)
+                                    .ifPresent(rawResponse -> {
+                                        if(rawResponse instanceof CommandResponse<?> cmdResponse) {
+                                            embeds.addAll(
+                                                    List.of((MessageEmbed[]) cmdResponse.messageResponse())
+                                            );
+
+                                            try(var fileUpload = cmdResponse.fileUpload()) {
+                                                if(fileUpload != null) files.add(fileUpload);
+                                            } catch (IOException e) {
+                                                throw new RuntimeException(e);
+                                            }
+                                        }
+                                    })
+                    );
+
+                    if(!embeds.isEmpty()) {
+                        if(!files.isEmpty()) {
+                            return interactHook.sendMessageEmbeds(embeds).addFiles(files);
+                        } else {
+                            return interactHook.sendMessageEmbeds(embeds);
+                        }
                     }
                 }
 
-                return hook.sendMessageEmbeds(
-                        Arrays.asList((MessageEmbed[]) retrieveAndProcessResponse(userId, event))
-                );
-            } else {
-                if(getEphemeralType() == TypeOfEphemeral.DEFAULT) {
-                    event.deferReply(msgIsEphemeral).complete();
-                } else {
-                    CommandResponse<?> responseBeforeRunning = beforeRunCommand(userId, event);
+                AbstractMap.SimpleEntry<T[], FileUpload> response = retrieveAndProcessResponse(userId, event);
+                T[] responseKey = response.getKey();
+                FileUpload responseValue = response.getValue();
 
-                    event.deferReply(responseBeforeRunning.messageIsEphemeral()).complete();
-                    if(responseBeforeRunning.messageResponse() != null)
-                        event.reply((String) responseBeforeRunning.messageResponse()[0]).complete();
+                if(responseValue == null) {
+                    return interactHook.sendMessageEmbeds(
+                            Arrays.asList((MessageEmbed[]) responseKey)
+                    );
+                } else {
+                    return interactHook.sendMessageEmbeds(
+                            Arrays.asList((MessageEmbed[]) responseKey)
+                    ).addFiles(responseValue);
+                }
+            } else {
+                if(!preExecHooks.isEmpty()) {
+                    ArrayList<MessageEmbed> embeds = new ArrayList<>();
+                    ArrayList<FileUpload> files = new ArrayList<>();
+                    final String[] lastResponse = new String[1];
+
+                    preExecHooks.forEach(
+                            hook -> hook
+                                    .execute(this, event, null)
+                                    .ifPresent(rawResponse -> {
+                                        if(rawResponse instanceof CommandResponse<?> cmdResponse) {
+                                            if(cmdResponse.messageResponse() instanceof MessageEmbed[] msgResponse)
+                                                embeds.addAll(List.of(msgResponse));
+                                            else
+                                                lastResponse[0] = (String) cmdResponse.messageResponse()[0];
+
+                                            try(var fileUpload = cmdResponse.fileUpload()) {
+                                                if(fileUpload != null) files.add(fileUpload);
+                                            } catch (IOException e) {
+                                                throw new RuntimeException(e);
+                                            }
+                                        }
+                                    })
+                    );
+
+                    if(!files.isEmpty()) {
+                        if(lastResponse[0] != null)
+                            return interactHook.sendMessage(lastResponse[0]).addFiles(files);
+                        else if(!embeds.isEmpty())
+                            return interactHook.sendMessageEmbeds(embeds).addFiles(files);
+                    } else {
+                        if(lastResponse[0] != null)
+                            return interactHook.sendMessage(lastResponse[0]);
+                        else if(!embeds.isEmpty())
+                            return interactHook.sendMessageEmbeds(embeds);
+                    }
                 }
 
-                T[] response = retrieveAndProcessResponse(userId, event);
+                AbstractMap.SimpleEntry<T[], FileUpload> response = retrieveAndProcessResponse(userId, event);
+                T[] responseKey = response.getKey();
+                FileUpload responseValue = response.getValue();
 
-                if(response instanceof MessageEmbed[])
-                    return hook.sendMessageEmbeds(Arrays.asList((MessageEmbed[]) response));
-                else
-                    return hook.sendMessage((String) response[0]);
+                if(responseValue != null) {
+                    if(responseKey instanceof MessageEmbed[] embeds)
+                        return interactHook.sendMessageEmbeds(Arrays.asList(embeds)).addFiles(responseValue);
+                    else
+                        return interactHook.sendMessage((String) responseKey[0]).addFiles(responseValue);
+                } else {
+                    if(responseKey instanceof MessageEmbed[] embeds)
+                        return interactHook.sendMessageEmbeds(Arrays.asList(embeds));
+                    else
+                        return interactHook.sendMessage((String) responseKey[0]);
+                }
             }
         } catch(Exception e) {
             if(isForgivingRatelimitOnError())
                 getRatelimitMap().remove(userId);
 
-            return hook.sendMessageEmbeds(handleError(e));
+            return interactHook.sendMessageEmbeds(handleError(e));
         }
     }
 
@@ -690,16 +808,36 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
     protected ReplyCallbackAction processNonDeferredCommand(@NonNull final E event) {
         final long userId = event.getUser().getIdLong();
         final boolean msgIsEphemeral = determineEphemeralStatus(event);
-        T[] response;
+        AbstractMap.SimpleEntry<T[], FileUpload> response;
         ReplyCallbackAction reply;
 
         try {
             response = retrieveAndProcessResponse(userId, event);
 
-            if(isOnlyEmbed())
-                reply = event.replyEmbeds(Arrays.asList((MessageEmbed[]) response)).setEphemeral(msgIsEphemeral);
-            else
-                reply = event.reply((String) response[0]).setEphemeral(msgIsEphemeral);
+            boolean isEmbedOnly = isOnlyEmbed();
+            T[] responseKey = response.getKey();
+            FileUpload responseValue = response.getValue();
+            if(responseValue == null) {
+                if(isEmbedOnly) {
+                    reply = event.replyEmbeds(
+                            Arrays.asList((MessageEmbed[]) responseKey)
+                    ).setEphemeral(msgIsEphemeral);
+                } else {
+                    reply = event.reply(
+                            (String) responseKey[0]
+                    ).setEphemeral(msgIsEphemeral);
+                }
+            } else {
+                if(isEmbedOnly) {
+                    reply = event.replyEmbeds(
+                            Arrays.asList((MessageEmbed[]) responseKey)
+                    ).setEphemeral(msgIsEphemeral).addFiles(responseValue);
+                } else {
+                    reply = event.reply(
+                            (String) responseKey[0]
+                    ).setEphemeral(msgIsEphemeral);
+                }
+            }
 
             return reply;
         } catch(Exception e) {
@@ -718,12 +856,15 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
      */
     @SuppressWarnings("unchecked")
     @NonNull
-    private T[] retrieveAndProcessResponse(long userId, @NonNull E event) {
+    private AbstractMap.SimpleEntry<T[], FileUpload> retrieveAndProcessResponse(long userId, @NonNull E event) {
         CommandResponse<?> responseFromCommand = isActive() ? runCommand(userId, event) : inactiveCommandResponse();
 
         determineRatelimit(userId, responseFromCommand);
 
-        return (T[]) responseFromCommand.messageResponse();
+        return new AbstractMap.SimpleEntry<>(
+                (T[]) responseFromCommand.messageResponse(),
+                responseFromCommand.fileUpload()
+        );
     }
 
     private boolean determineEphemeralStatus(@NonNull E event) {
@@ -752,6 +893,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
      * @param command The command that is being executed
      * @param message The message to delete
      */
+    @Deprecated
     public static void letMessageExpire(@NonNull BotCommand<?, ?> command, @NonNull Message message) {
         if(command.doMessagesExpire())
             message.delete().queueAfter(command.getMessageExpirationLength(), TimeUnit.SECONDS);
@@ -799,7 +941,8 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
      * @param name The name of the command
      * @param desc The description of the command
      * @return The command data
-     * @throws IllegalArgumentException If the command type is invalid or if the command is a slash command and does not have a description
+     * @throws IllegalArgumentException If the command type is invalid or if the command is a slash command and does not
+     * have a description
      */
     @NonNull
     protected static CommandData getJDACommandData(
@@ -832,6 +975,7 @@ public abstract class BotCommand<T, E extends GenericCommandInteractionEvent> {
     private static CommandResponse<MessageEmbed> inactiveCommandResponse() {
         return new CommandResponse<>(
                 null,
+                true,
                 new EmbedBuilder().setDescription("This command is currently not active").setColor(Color.RED).build()
         );
     }
